tests/compile_fail/on_a_function_without_result_type_but_with_dont_cache_errors.rs
use michie::memoized;

#[memoized(key_expr = (), dont_cache_errors)]
fn f() -> i32 { 4 }

fn main() {}
