tests/compile_fail/on_a_function_without_result_type_but_with_dont_cache_errors.stderr
error: function return type must be Result<T,E> (for some T, E)
 --> tests/compile_fail/on_a_function_without_result_type_but_with_dont_cache_errors.rs:3:1
  |
3 | #[memoized(key_expr = (), dont_cache_errors)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
